Add swagger contract for raw scrape endpoint
